[tool.poetry]
name = "tg-sheets"
version = "0.1.0"
description = ""
authors = ["IvanyukStas <aswd25@yandex.ru>"]

[tool.poetry.dependencies]
aiogram = "^2.13"
environs = "^9.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
