[tool.poetry]
name = "tg-sheets"
version = "0.1.0"
description = ""
authors = ["IvanyukStas <aswd25@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8.0"
aiogram = "^2.13"
environs = "^9.3.2"
SQLAlchemy = "^1.4.17"
DateTime = "^4.3"
alembic = "^1.6.5"
models = "^0.9.3"
automium_web = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
